--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "c9.ide.smvide",
+  "name": "tresamigos.smvide",
   "description": "Smv IDE plugins",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "author": "ninjapapa",
   "contributors": [
     {
