added engines to package.json

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "smvcommand": {},
     "smvgraphview": {}
   },
+  "engines": {
+    "c9": ">=3.0.0"
+  },
   "categories": [
     "miscellaneous"
   ],
