Change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tresamigos.smvide",
+  "name": "smvide",
   "description": "Smv IDE plugins",
   "version": "0.0.4",
   "author": "ninjapapa",
