try simple thing first

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "url": "https://github.com/ninjapapa/smv_c9plugins"
   },
   "plugins": {
-    "smvcommand": {},
-    "smvgraphview": {}
+    "smvcommand": {}
   },
   "engines": {
     "c9": ">=3.0.0"
